# pydroid-hello

./: .gitignore  README.md  buildozer.spec  main.py  pyproject.toml
docs/: BUILD.md  HOWTO.md
