[tool.poetry]
name = "pydroid-hello"
version = "0.1.0"
description = ""
authors = ["sungchul.shin <sungchul.shin@intelliantech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
kivy = { version = ">=2.3.1,<3.0.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
