[tool.poetry]
name = "pydroid-hello"
version = "0.1.0"
description = ""
authors = ["sungchul.shin <sungchul.shin@intelliantech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"  # Downgraded for compatibility
kivy = { version = ">=2.3.1,<3.0.0" }
pyjnius = "1.6.1"

[tool.poetry.group.dev.dependencies]
buildozer = "^1.5.0"
setuptools = ">=68.0"
cython = "0.29.36"  # Pinned for Python-for-Android compatibility

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"